Fix clipping, added typekit

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -2,7 +2,7 @@
 
 $text: #333;
 $blue: #3498db;
-$font: "Helvetica Neue", Arial, sans-serif;
+$font: "pragmatica-web", sans-serif;
 
 
 .chromeframe {
@@ -38,7 +38,7 @@ header {
 
 	select, input {
 		border: none;
-		border-bottom: 1px dashed $blue;
+		// border-bottom: 1px dashed $blue;
 		color: $blue;
 		display: inline-block;
 		font: inherit;
@@ -71,7 +71,7 @@ header {
 		padding: 0.2em 0;
 
 		&:hover {
-			color: $blue;
+			// color: $blue;
 		}
 	}
 
